@startuml Wiki sobre eines de forja

class Usuari {
  id : bigint <<PK>>
  name : string
  email : string
  password : string
  bio : string
  rol : string 
  avatar : string 
}

class Post {
  id : bigint <<PK>>
  titol : string
  descripcio : text
  dataPost : date
  epoca : string
  imatge : string
  usuari_id : bigint <<FK>>
  tipus_eina_id : bigint <<FK>>
}

class Comentaris {
  id : bigint <<PK>>
  contingut : text
  usuari_id : bigint <<FK>>
  post_id : bigint <<FK>>
  parent_id : bigint <<FK>>  ''parent_id = id del comentari pare, si no hi ha resposta "null"''
}


class Valoracions {
  id : bigint <<PK>>
  puntuacio : int
  usuari_id : bigint <<FK>>
  post_id : bigint <<FK>>
}

class Tipus_eines {
  id : bigint <<PK>>
  nom : string
}

Usuari "1" -- "0..*" Post : crea
Usuari "1" -- "0..*" Comentaris : escriu
Usuari "1" -- "0..*" Valoracions : fa
Usuari "1" -- "0.." Tipus_eines : crea
Post "1" -- "0..*" Comentaris : te
Post "1" -- "0..*" Valoracions : rep
Comentaris "1" -- "0..*" Comentaris : respon a

Tipus_eines "1" -- "0..*" Post : classifica

@enduml
